--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet"> 
     <title>HTML, CSS & Git Basics</title>
 </head>
 <body>
-    
+    <div class="container">
+        <section class="header">
+            <div class="header__img">
+                <img src="img/photo.jpg" alt="photo">
+            </div>
+            <div class="header__title">
+                <h1 class="header__name">Denis Paramonov</h1>
+                <p class="header__text">Web Development <br>
+                HTML/CSS, JSbasic</p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
