--- a/index.html
+++ b/index.html
@@ -1,83 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <title>HTML, CSS & Git Basics</title>
-  </head>
-  <body>
-    <div class="container">
-      <section class="header">
-        <div class="header__img">
-          <img src="img/photo.jpg" alt="photo" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet" />
+  <title>HTML, CSS & Git Basics</title>
+</head>
+
+<body>
+  <div class="container">
+    <section class="header">
+      <div class="header__img">
+        <img src="img/photo.jpg" alt="photo" />
+      </div>
+      <div class="header__title">
+        <h1 class="header__name">Denis Paramonov</h1>
+        <p class="header__text">
+          Web Development <br>
+          HTML/CSS, JSbasic
+        </p>
+      </div>
+    </section>
+    <section class="section">
+      <div class="section__header">
+        <h2 class="section__title">ABOUT ME</h2>
+      </div>
+      <div class="about">
+        <div class="about__item about__item--border">
+          <h3 class="about__title">Contacts</h3>
+          <p class="about__text">Full name: Denis Paramonov</p class="about__text">
+          <p class="about__text">
+            Email:
+            <a href="mailto:deparamonov@gmail.com">deparamonov@gmail.com</a>
+          </p>
+          <p class="about__text">Phone: <a href="tel:+37529558419>">+375 29 55 84 19</a></p>
         </div>
-        <div class="header__title">
-          <h1 class="header__name">Denis Paramonov</h1>
-          <p class="header__text">
-            Web Development <br>
-            HTML/CSS, JSbasic
+        <div class="about__item about__item--border">
+          <h3 class="about__title">Summary</h3>
+          <p class="about__text">
+            I am a disciplined and motivated person. I like to solve various
+            logical tasks. I am very interested in web development. In this
+            course I want to get practical experience on a project. And in the
+            near future to find their place in this profession.
           </p>
         </div>
-      </section>
-      <section class="section">
-        <div class="section__header">
-          <h2 class="section__title">ABOUT ME</h2>
+        <div class="about__item about__item--border">
+          <h3 class="about__title">Skills</h3>
+          <ul class="about__skills">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JSbasic</li>
+            <li>BEM</li>
+          </ul>
         </div>
-        <div class="about">
-          <div class="about__item">
-            <h3 class="about__title">contacts</h3>
-            <p class="about__text">Full name: Denis Paramonov</p class="about__text">
-            <p class="about__text">
-              Email:
-              <a href="mailto:deparamonov@gmail.com">deparamonov@gmail.com</a>
-            </p>
-            <p class="about__text">Phone: <a href="tel:+37529558419>">+375 29 55 84 19</a></p>
-          </div>
-          <div class="about__item">
-            <h3 class="about__title">Summary</h3>
-            <p>
-              I am a disciplined and motivated person. I like to solve various
-              logical tasks. I am very interested in web development. In this
-              course I want to get practical experience on a project. And in the
-              near future to find their place in this profession.
-            </p>
-          </div>
-          <div class="about__item">
-            <h3 class="about__title">Skills</h3>
-            <ul class="skills">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JSbasic</li>
-              <li>BEM</li>
-            </ul>
-          </div>
-          <div class="about__item">
-            <h3 class="about__title">Lastest projects</h3>
-            <p class="about__projects">
-                <p class="about__text">You can see my projects on <a href="https://github.com/DMarin0">GitHub</a></p>
-            </p>
-          </div>
-          <div class="about__item">
-            <h3 class="about__title">Education</h3>
-            <p class="about__education">
-                <p class="about__text">I graduated from BSUIR, faculty of computer technology</p>
-            </p>
-          </div>
-          <div class="about__item">
-            <h3 class="about__title">English level</h3>
-            <p class="about__english">
-                <p class="about__text">According to <a href="https://training.by/">training.by</a> my English level is A2.</p>
-            </p>
-          </div>
+        <div class="about__item">
+          <h3 class="about__title">Lastest projects</h3>
+          <p class="about__text">You can see my projects on <a href="https://github.com/DMarin0">GitHub</a></p>
         </div>
-        
-      </section>
-    </div>
-  </body>
+        <div class="about__item">
+          <h3 class="about__title">Education</h3>
+          <p class="about__text">I graduated from BSUIR, faculty of computer technology</p>
+        </div>
+        <div class="about__item">
+          <h3 class="about__title">English level</h3>
+          <p class="about__text">According to <a href="https://training.by/">training.by</a> my English level is A2.</p>
+        </div>
+      </div>
+    </section>
+   
+  </div>
+</body>
+
 </html>
