--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</symbol>
 </svg>	
   <div class="container">
-    <section class="header">
+    <header class="header">
       <div class="header__img">
         <img src="img/photo.jpg" alt="photo" />
       </div>
@@ -42,7 +42,7 @@
           HTML/CSS, JSbasic
         </p>
       </div>
-    </section>
+    </header>
     <section class="section">
       <div class="section__header">
         <h2 class="section__title">ABOUT ME</h2>
